@@ -19,6 +19,8 @@ glibc (2.21-0experimental4) UNRELEASED; urgency=medium
     visibility.
   * patches/hurd-i386/cvs-hidden.diff: New patch, to fix build with hidden
     support.
+  * sysdeps/hurd-i386.mk: Disable libc0.3-i686 and libc0.3-xen build for now,
+    to get 2.21 out against the binutils version which broke them.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Nov 2015 20:20:54 +0100
 
